Fixed #56. The submenus are now set to a height of 10px when out of the screen. This ensures that the menu is just as tall as it needs to be.

--- a/fingerpaint/src/nl/tue/fingerpaint/client/resources/fingerpaint.css
+++ b/fingerpaint/src/nl/tue/fingerpaint/client/resources/fingerpaint.css
@@ -132,7 +132,6 @@ body {
 	background-color: WHITE;
 	overflow: hidden;
 	width: MENU_WIDTH;
-	padding-bottom: 4px;
 }
 
 #menuPanel, #menuSub1Panel, #menuSub2Panel {
